1. tambah dependencies baru 2. add register config buat connect ke localhost 3, create catch function buat catch user input ke php file

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ dependencies:
   cached_network_image: ^3.2.1
   flutter_svg: ^1.1.6
   intl: ^0.17.0
+  mysql1: ^0.20.0
+  http: ^0.13.4
 dev_dependencies: 
   flutter_test: 
     sdk: flutter
