Update codes utk bottom bar menu & beberapa fix

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,13 +6,15 @@ environment:
 dependencies: 
   flutter: 
     sdk: flutter
+
   cached_network_image: ^3.2.1
   flutter_svg: ^1.1.6
   intl: ^0.17.0
   mysql1: ^0.20.0
   http: ^0.13.4
   pin_code_fields: ^7.3.0
-
+  bottom_navy_bar: ^6.0.0
+  animations: ^2.0.7
 
 dev_dependencies:
   flutter_test: 
