--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
   pin_code_fields: ^7.3.0
   bottom_navy_bar: ^6.0.0
   animations: ^2.0.7
+  shared_preferences: ^2.0.9
+#  d_method: 0.2.1
+
 
 dev_dependencies:
   flutter_test: 
