--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   bottom_navy_bar: ^6.0.0
   animations: ^2.0.7
   shared_preferences: ^2.0.9
+  image_picker: ^0.8.4+4
 #  d_method: 0.2.1
 
 
