--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   animations: ^2.0.7
   shared_preferences: ^2.0.9
   image_picker: ^0.8.4+4
+  flutter_local_notifications: ^9.3.0
 #  d_method: 0.2.1
 
 
