--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,10 +18,10 @@ dependencies:
   shared_preferences: ^2.0.9
   image_picker: ^0.8.4+4
   flutter_local_notifications: ^9.3.0
-  fl_chart: ^0.63.0
   pdf: ^3.10.4
   flutter_file_downloader: ^1.1.2
   url_launcher: ^6.1.11
+  d_chart: ^2.2.11
 #  d_method: 0.2.1
 
 
