--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,9 +19,15 @@ dependencies:
   image_picker: ^0.8.4+4
   flutter_local_notifications: ^9.3.0
   pdf: ^3.10.4
-  flutter_file_downloader: ^1.1.2
   url_launcher: ^6.1.11
   d_chart: ^2.2.11
+  dio: ^5.2.1+1
+  flutter_pdfview: ^1.3.1
+  firebase_core: ^2.14.0
+  firebase_messaging: ^14.6.4
+  firebase_database: ^10.2.3
+  firebase_remote_config: ^4.2.3
+  firebase_auth: ^4.6.3
 #  d_method: 0.2.1
 
 
