--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   firebase_database: ^10.2.3
   firebase_remote_config: ^4.2.3
   firebase_auth: ^4.6.3
+  open_file: ^3.3.2
 #  d_method: 0.2.1
 
 
