--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   firebase_auth: ^4.6.3
   open_file: ^3.3.2
   pdf_viewer_plugin: ^2.0.1
+  mockito: ^5.4.2
 
 #  d_method: 0.2.1
 
@@ -36,6 +37,7 @@ dependencies:
 dev_dependencies:
   flutter_test: 
     sdk: flutter
+  test: ^1.24.1
 flutter: 
   uses-material-design: true
   assets: 
