--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   open_file: ^3.3.2
   pdf_viewer_plugin: ^2.0.1
   mockito: ^5.4.2
+  awesome_notifications: ^0.7.4+1
+  awesome_notifications_fcm: ^0.7.4+1
 
 #  d_method: 0.2.1
 
