--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   awesome_notifications: ^0.7.4+1
   awesome_notifications_fcm: ^0.7.4+1
   flutter_switch: ^0.3.2
+  searchbar_animation: ^0.0.4
 
 
 
