--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   awesome_notifications_fcm: ^0.7.4+1
   flutter_switch: ^0.3.2
   searchbar_animation: ^0.0.4
-
+  flutter_add_to_cart_button: ^1.1.0
 
 
 dev_dependencies:
