--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   searchbar_animation: ^0.0.4
   flutter_add_to_cart_button: ^1.1.0
   firebase_analytics: ^10.4.4
+  get: ^4.6.5
 
 
 dev_dependencies:
