--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,11 @@ dependencies:
   d_chart: ^2.2.11
   dio: ^5.2.1+1
   firebase_core: ^2.14.0
-  firebase_messaging: ^14.6.4
+#  firebase_messaging: ^14.6.4
   firebase_database: ^10.2.3
   firebase_remote_config: ^4.2.3
   firebase_auth: ^4.6.3
-  open_file: ^3.3.2
+#  open_file: ^3.3.2
   pdf_viewer_plugin: ^2.0.1
   mockito: ^5.4.2
   flutter_switch: ^0.3.2
@@ -35,6 +35,7 @@ dependencies:
   flutter_add_to_cart_button: ^1.1.0
   firebase_analytics: ^10.4.4
   get: ^4.6.5
+  flutter_launcher_icons: ^0.13.1
 
 
 dev_dependencies:
@@ -46,7 +47,14 @@ flutter:
   assets: 
     - assets/
     - assets/images/
-    - android/app/src/main/res/drawable/app_icon.png
+    - assets/app_icon.png
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "mipmap/ic_launcher" # Path to your app icon image relative to the root of your project
+
+
   fonts:
     - family: Poppins, Plus Jakarta Sans
       fonts: 
